fixed part of the navbar shifting problem.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ body {
     margin: 0;
 }
 
+.home-body {
+    margin-top: 4px;
+}
+
 .body-form {
     overflow: hidden;
 }
